# sar-multi-agent

./: .env.example  .gitignore  INSAR_NEW_APPROACH.md  LANGSERVE_README.md  PORTFOLIO.md  README.md  STRUCTURE.md  client_example.py  config.py  embedding_create.py  graph.py  insar_datasets.py  langgraph.json  location_utils.py  main.py  pdf_setup.py  pyproject.toml  requirements.txt  sar_segmentation_node.py  server.py  start_sar_download_api.sh  state.py  summarize_node.py  test_sar_seg.py  vision_tools.py  web_ui.py
core/: __init__.py  chains.py  llm_config.py  models.py
evaluation/: __init__.py  graders.py
nodes/: __init__.py  prompt_loader.py
nodes/retrieval/: __init__.py  casual_chat_node.py  coordinate_nodes.py  db_nodes.py  download_executor.py  download_formatter.py  download_helpers.py  download_node.py  generation_nodes.py  search_nodes.py
nodes/retrieval/prompts/: context_extraction.txt  intent_classification.txt  location_extraction.txt  query_optimization.txt  specificity_check.txt
nodes/sar/: __init__.py  insar_check.py  insar_executor.py  insar_processing.py  insar_validation.py
nodes/vision/: __init__.py  vision_nodes.py
routing/: __init__.py  routers.py
scripts/: check_services.sh  start_all.sh  stop_all.sh
services/cv_vision/: ARCHITECTURE.md  README.md  requirements.txt
services/insar_processing/: INSTALL_ESA_SNAPPY.sh  README.md  insar_api.py  main.py  start_insar_api.sh
services/sar_download/: .env.example  README.md  __init__.py  __main__.py  sar_download_api.py  sar_download_utils.py  start_sar_api.sh  test_sar_api.py
(+31 files in other folders)
